# mbed-client-cli

./: .gitignore  .mbedignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  mbed-os-license.txt  mbed_lib.json  module.json
.github/: issue_template.md  pull_request_template.md
example/Mbed-OS/: README.md
example/linux/: Makefile  README.md  main.c  memtest.sh
example/linux/mbed-trace/: mbed_trace.h
example/mbed-os-5/: .mbedignore  README.md  main.c  main.cpp  mbed-client-cli.lib  mbed-trace.lib  mbed_app.json
mbed-client-cli/: ns_cmdline.h  ns_list.h  ns_types.h
source/: CMakeLists.txt  ns_cmdline.c  ns_list.c
source/ns_list_internal/: ns_list.c  ns_list.h  ns_types.h
test/: CMakeLists.txt  Test.c  Test.cpp  Test_Runner.c  makefile  run_unit_tests.sh
